# MoUI

./: .gitignore  CODE_WIKI.md  Cargo.toml
.trae/documents/: todo-app-architecture.md  todo-app-prd.md  wasm-plugin-ui-framework-plan.md
crates/moui-cli/: Cargo.toml
crates/moui-cli/src/: main.rs
crates/moui-host/: Cargo.toml
crates/moui-host/src/: bridge.rs  lib.rs  runtime.rs  types.rs
crates/moui-renderer/: Cargo.toml
crates/moui-renderer/src/: app.rs  event.rs  lib.rs  renderer.rs
docs/: moonbit-installation.md  moonbit-plugin-guide.md
plugins/counter/: counter.component.wasm  counter.wasm  moon.mod.json
plugins/counter/wit/: world.wit
plugins/todo/: moon.mod.json  todo.component.wasm  todo.wasm
plugins/todo/interface/moui/plugin/uiTypes/: moon.pkg.json  top.mbt
plugins/todo/wit/: world.wit
plugins/todo/world/uiPlugin/: moon.pkg.json
