[workspace]
members = [
    "crates/moui-host",
    "crates/moui-renderer",
    "crates/moui-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
moui-host = { path = "crates/moui-host" }
moui-renderer = { path = "crates/moui-renderer" }
anyhow = "1"
wasmtime = "30"
wasmtime-wasi = "30"
log = "0.4"
env_logger = "0.11"
